[package]
name = "host_register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_json = "1.0.103"
nanoid = "0.4.0"
async-trait = "0.1.72" # use this crate until its stable. info: https://github.com/rust-lang/wg-async/issues/279 